# data533_project

./: .coverage  .gitignore  LICENSE  README.md  file.txt  pyproject.toml  test_run_focuspro.ipynb
.github/workflows/: ci.yml
project/: .coverage  .gitignore  README.md  discover.py  run_demo.py  setup.py
project/.github/workflows/: ci.yml
project/analytics/: distraction.py  focus_errors.py  focuscore.py  introduction.md  weekly_report.py
project/core/: Introduction  focus_session.py  habit.py  task.py
project/planner/: base_planner.py  daily_plan.py  introduction.md  priority_strategy.py  schedulers.py
project/test/: README.md  __init__.py  conftest.py  introduction.md  test_core.py  test_core_focus_session_module.py  test_core_habit_module.py  test_core_suite.py  test_core_task_alias_module.py  test_core_tasks_module.py  test_focuscore.py  test_planner.py  test_planner_helpers.py  test_suite.py  test_tasks.py
src/focuspro_data533.egg-info/: PKG-INFO
src/project/: __init__.py  introduction.md  modes.txt  run_demo.py  text.txt
src/project/analytics/: distraction.py  exceptions.py  focuscore.py  introduction.md  weekly_report.py
src/project/core/: Introduction.md  exceptions.py  focus_session.py  habit.py  tasks.py
src/project/planner/: .gitignore  base_planner.py  daily_plan.py  exceptions.py  introduction.md  priority_strategy.py  schedulers.py
tests/: README.md  __init__.py  conftest.py  test_analytics.py  test_core.py  test_focuscore.py  test_planner.py  test_planner_helpers.py  test_priority_strategy.py  test_suite.py
