[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "focuspro-inaara"
version = "0.0.1"
authors = [
  { name="Inaara Rajwani", email="inaarari11@gmail.com" },
  { name="Yusen Rong", email="yusenrong46@gmail.com" },
  { name="Anita Zeng", email="zez321@student.ubc.ca" }
]
description = "Educational productivity toolkit for tasks, habits, focus sessions, and analytics"
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/inaararajwani11/data533_project"
Issues = "https://github.com/inaararajwani11/data533_project/issues"
